cmake_minimum_required(VERSION 3.0)
project(main)
find_package(Torch REQUIRED)
include_directories(${TORCH_INCLUDE_DIRS})
find_package(GDAL REQUIRED)
include_directories(${GDAL_INCLUDE_DIRS})
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(main main.cpp)
target_link_libraries(main ${TORCH_LIBRARIES})
target_link_libraries(main ${GDAL_LIBRARY})
target_link_libraries(main ${OpenCV_LIBS})
set_property(TARGET main PROPERTY CXX_STANDARD 11)
